# jax-nansparse

./: .gitignore  README.md  pyproject.toml
src/jax_nansparse/: __init__.py  exceptions.py  jacobian.py
tests/: test_jacfwd_sparsity.py
