[project]
name = "jax-nansparse"
version = "0.1.0"
description = "Jacobian sparsity detection of JAX functions using NaN propagation"
readme = "README.md"
authors = [{ name = "Nardi Lam", email = "mail@nardilam.nl" }]
requires-python = ">=3.11"
dependencies = ["jax>=0.7.2", "numpy>=2.3.3"]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.4.2", "ruff>=0.13.1"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["F722"]
extend-select = ["I"]
